--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "access": "public"
   },
   "files": [
-    "src"
+    "index.js",
+    "index.js.map",
+    "register.js",
+    "register.js.map"
   ],
   "main": "index.js",
   "scripts": {
